[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/grass.png" type="Texture" id=2]
[ext_resource path="res://scene/main/Main.gd" type="Script" id=3]
[ext_resource path="res://scene/coin/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/hud/Hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=7]
[ext_resource path="res://scene/powerup/PowerUp.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 3 )
Coin = ExtResource( 4 )
PowerUp = ExtResource( 8 )
Playtime = 30

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CoinContainer" type="Node" parent="."]

[node name="Hud" parent="." instance=ExtResource( 5 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 10, 10 )

[node name="GameTimer" type="Timer" parent="."]

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="hurt" from="Player" to="." method="game_over"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="start_game" from="Hud" to="." method="new_game"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
